[package]
name = "_pgpq"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE.txt"

[lib]
name = "pgpq"
crate-type = ["cdylib"]

[dependencies]
arrow = {version = "32.0.0", features = ["pyarrow"] }
pgpq = { path = "./pgpq"}

[dependencies.pyo3]
version = "^0.18.0"
features = ["extension-module", "abi3-py37"]

[package.metadata.maturin]
python-source = "python"
description-content-type = "text/markdown; charset=UTF-8; variant=GFM"
name = "pgpq._pgpq"
