
[project]
name = "pgpq"
repository = "https://github.com/adriangb/pgpq"
description = "Arrow -> PostgreSQL encoder"
authors = [
    {name = "Adrian Garcia Badaracco"}
]
license = { text = "MIT" }
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyarrow>=11",
]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/adriangb/pgpq"
documentation = "https://github.com/adriangb/pgpq/README.md"
repository = "https://github.com/adriangb/pgpq"

[build-system]
requires = ["maturin>=0.13.0<14"]
build-backend = "maturin"

[tool.maturin]
sdist-include = ["Cargo.lock"]
strip = true
python-source = "python"
profile = "release"

[tool.isort]
profile = "black"
