[package]
name = "pgpq"
version = "0.1.2"
edition = "2021"
description = "Encode Apache Arrow `RecordBatch`es to Postgres' native binary format"
license = "MIT"
readme = "README.md"
exclude = ["/tests"]
homepage = "https://github.com/adriangb/pgpq"
repository = "https://github.com/adriangb/pgpq"
documentation = "https://github.com/adriangb/pgpq/blob/workspaces/core/README.md"
authors = ["Adrian Garcia Badaracco <dev@adriangb.com>"]

[dependencies]
bytes = "^1.4.0"
arrow-schema = "^33.0.0"
enum_dispatch = "0.3.11"

[dependencies.arrow-array]
version = "^33.0.0"
default-features = false

[dev-dependencies]
rstest = ">=0.16.0"
parquet = ">=33.0.0"
criterion = ">=0.4.0"
arrow = { version = ">=32.0.0", features = ["ipc"]}
arrow-ipc = ">=33.0.0"
postgres-types = {version = ">=0.2.4", features = ["with-chrono-0_4"]}

[[bench]]
name = "yellow_cab_dataset"
harness = false

[[bench]]
name = "experiments"
harness = false
