[package]
name = "_arrow_json"
version = "0.7.3"
edition = "2021"
readme = "README.md"
license = "MIT"

[lib]
name = "_arrow_json"
crate-type = ["cdylib"]

[dependencies]
arrow = {version = "^33.0.0", features = ["pyarrow", "json"] }
serde = "1.0.158"
serde_json = "1.0.94"

[dependencies.pyo3]
version = "^0.18.0"
features = ["extension-module", "abi3-py37"]

[package.metadata.maturin]
name = "arrow_json._arrow_json"
