[package]
name = "_arrow_json"
version = "0.9.0"
edition = "2021"
readme = "README.md"
license = "MIT"

[lib]
name = "_arrow_json"
crate-type = ["cdylib"]

[dependencies]
arrow = {version = ">=56.0.0", features = ["pyarrow", "json"] }
arrow-json = ">=56.0.0"
serde = "1.0.158"
serde_json = "1.0.94"

[dependencies.pyo3]
version = "^0.25.1"
features = ["extension-module", "abi3-py39", "py-clone"]

[package.metadata.maturin]
name = "arrow_json._arrow_json"
