
[project]
name = "arrow-json"
version = "0.9.0"
description = "Arrow -> JSON encoder"
authors = [
    {name = "Adrian Garcia Badaracco"}
]
license = { text = "MIT" }
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyarrow>=11",
    "typing-extensions>=3; python_version < '3.8'",
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "maturin>= 1.0.0",
  "pre-commit>= 2.16.0",
  "pyarrow>= 11.0.0",
  "polars>= 0.16.1",
]
bench = []

[project.urls]
homepage = "https://github.com/adriangb/pgpq"
documentation = "https://github.com/adriangb/pgpq/README.md"
repository = "https://github.com/adriangb/pgpq"

[build-system]
requires = ["maturin>=1.0.0,<2"]
build-backend = "maturin"

[tool.maturin]
sdist-include = ["Cargo.lock"]
strip = true
python-source = "python"
profile = "release"
module-name = "arrow_json._arrow_json"
bindings = 'pyo3'
features = ["pyo3/extension-module"]

[tool.isort]
profile = "black"
