[package]
name = "pgpq"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
bytes = "^1.4.0"
chrono = "^0.4.23"
arrow-schema = "^32.0.0"

[dependencies.postgres-types]
version = "^0.2.4"
features = ["with-chrono-0_4"]

[dependencies.arrow-array]
version = "^32.0.0"
default-features = false
features = ["chrono-tz"]

[dev-dependencies]
rstest = ">=0.16.0"
parquet = ">=32.0.0"
criterion = ">=0.4.0"
arrow = ">=32.0.0"

[profile.bench]
debug = true

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "columnar_vs_rows"
harness = false
