[package]
name = "pgpq"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
bytes = "^1.4.0"
arrow-schema = "^32.0.0"
enum_dispatch = "0.3.11"

[dependencies.arrow-array]
version = "^32.0.0"
default-features = false

[dev-dependencies]
rstest = ">=0.16.0"
parquet = ">=32.0.0"
criterion = ">=0.4.0"
arrow = { version = ">=32.0.0", features = ["ipc"]}
arrow-ipc = "32.0.0"

[profile.bench]
debug = true

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "columnar_vs_rows"
harness = false

[[bench]]
name = "to_sql_vs_manual"
harness = false
