[package]
name = "pgpq"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
bytes = "^1.4.0"
arrow-schema = "^32.0.0"
enum_dispatch = "0.3.11"

[dependencies.arrow-array]
version = "^32.0.0"
default-features = false

[dev-dependencies]
rstest = ">=0.16.0"
parquet = ">=32.0.0"
criterion = ">=0.4.0"
arrow = { version = ">=32.0.0", features = ["ipc"]}
arrow-ipc = "32.0.0"
postgres-types = {version = "0.2.4", features = ["with-chrono-0_4"]}

[profile.bench]
debug = true

[[bench]]
name = "yellow_cab_dataset"
harness = false

[[bench]]
name = "experiments"
harness = false
