[package]
name = "_pgpq"
version = "0.9.0"
edition = "2021"
readme = "README.md"
license = "MIT"

[lib]
name = "pgpq"
crate-type = ["cdylib"]

[dependencies]
arrow = {version = "46.0.0", features = ["pyarrow"] }
arrow-schema = "46.0.0"
bytes = "^1.4.0"
pgpq = { path = "../core" }

[dependencies.pyo3]
version = "^0.19.0"
features = ["extension-module", "abi3-py37"]

[package.metadata.maturin]
name = "pgpq._pgpq"
