[package]
name = "_pgpq"
version = "0.9.0"
edition = "2021"
readme = "README.md"
license = "MIT"

[lib]
name = "_pgpq"
crate-type = ["cdylib"]

[dependencies]
arrow = {version = "55.1.0", features = ["pyarrow"] }
arrow-schema = "55.1.0"
bytes = "^1.4.0"
pgpq = { path = "../core" }

[dependencies.pyo3]
version = "^0.24.0"
features = ["extension-module", "abi3-py39", "py-clone"]

[package.metadata.maturin]
name = "pgpq._pgpq"
