[package]
name = "_pgpq"
version = "0.10.0"
edition = "2021"
readme = "README.md"
license = "MIT"

[lib]
name = "_pgpq"
crate-type = ["cdylib"]

[dependencies]
arrow = {version = "56.0.0", features = ["pyarrow"] }
arrow-schema = "56.0.0"
bytes = "^1.4.0"
pgpq = { path = "../core" }

[dependencies.pyo3]
version = "^0.25.1"
features = ["extension-module", "abi3-py39", "py-clone"]

[package.metadata.maturin]
name = "pgpq._pgpq"
