[project]
name = "pgpq"
version = "0.9.0"
description = "Arrow -> PostgreSQL encoder"
authors = [
    {name = "Adrian Garcia Badaracco"}
]
license = { text = "MIT" }
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyarrow>=11",
    "typing-extensions>=3; python_version < '3.8'",
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
  "pytest >=7.0.0",
  "maturin >= 1.4.0",
  "pre-commit>=2.16.0",
  "testing.postgresql >= 1.3.0",
  "psycopg[binary] >= 3.1.8",
  "pyarrow >= 11.0.0",
]
bench = [
  "jupyter >=1.0.0",
  "requests",
  "duckdb",
]

[project.urls]
homepage = "https://github.com/adriangb/pgpq"
documentation = "https://github.com/adriangb/pgpq/README.md"
repository = "https://github.com/adriangb/pgpq"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
sdist-include = ["Cargo.lock"]
strip = true
python-source = "python"
profile = "release"
module-name = "pgpq._pgpq"
bindings = 'pyo3'
features = ["pyo3/extension-module"]

[tool.isort]
profile = "black"
