[project]
name = "pgpq"
version = "0.9.0"
description = "Arrow -> PostgreSQL encoder"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Adrian Garcia Badaracco"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyarrow>=11",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "maturin>=1.10.2",
    "pre-commit>=4.5.1",
    "testing.postgresql>=1.3.0",
    "psycopg[binary]>=3.3.2",
    "pyarrow>=22.0.0",
]
bench = [
    "jupyter>=1.0.0",
    "requests",
    "duckdb",
]

[project.urls]
Homepage = "https://github.com/adriangb/pgpq"
Documentation = "https://github.com/adriangb/pgpq/README.md"
Repository = "https://github.com/adriangb/pgpq"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
sdist-include = ["Cargo.lock"]
strip = true
python-source = "python"
profile = "release"
module-name = "pgpq._pgpq"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[tool.isort]
profile = "black"
